docs/vocabulary-synopsis/_sources/type/TimeFrame/v3/index.rst.txt
:orphan:

TimeFrame (v3)
==============

.. warning::
   This is not the latest version. The latest version is :doc:`v6 <../v6/index>`.

**Previous Version:** :doc:`v2 <../v2/index>`

**URI:** `http://clams.ai/vocabulary/type/TimeFrame/v3 <http://clams.ai/vocabulary/type/TimeFrame/v3>`_

**Shortname:** ``TimeFrame``

**Inherits from:** :doc:`Interval (v2) <../../Interval/v2/index>`

**Included in vocabulary versions:** :doc:`1.0.2 <../../../1.0.2/index>`

Also Known As
-------------

This type is also accessible at the following legacy URLs for backward
compatibility:

- `http://mmif.clams.ai/vocabulary/TimeFrame/v3 <http://mmif.clams.ai/vocabulary/TimeFrame/v3>`_


Description
-----------

A temporal interval in an audio or video stream. This is similar to the term segment used in audio processing, but that term has a different meaning in the image and video community.


Properties
----------

Synopsis
^^^^^^^^

*Properties marked with* **\*** *are required.*

.. list-table::
   :header-rows: 1
   :widths: 15 10 15 60

   * - Property
     - Type
     - Origin
     - Description
   * - ``frameType``
     - string
     - *native*
     - The type of TimeFrame. Possible values include, but are not limited to, bars, tones, ... `(more) <#frametype>`__

   * - ``end``
     - integer
     - :doc:`Interval (v2) <../../Interval/v2/index>`
     - The ending offset in the primary data. This point is exclusive. For time intervals, the unit is ... `(more) <#end>`__

   * - ``start``
     - integer
     - :doc:`Interval (v2) <../../Interval/v2/index>`
     - The starting offset in the primary data. This point is inclusive. For time intervals, the unit is ... `(more) <#start>`__

   * - ``targets``
     - array of string
     - :doc:`Interval (v2) <../../Interval/v2/index>`
     - IDs of a sequence of annotations covering the region of primary data referred to by this ... `(more) <#targets>`__

   * - ``timeUnit``
     - string
     - :doc:`Region (v3) <../../Region/v3/index>`
     - Specifies which unit of time the measurement is based. Can be seconds or milliseconds, or in case ... `(more) <#timeunit>`__

   * - ``classifications``
     - object
     - :doc:`Annotation (v4) <../../Annotation/v4/index>`
     - A map from label values to their "score" numbers provided by a classifier. The score can be ... `(more) <#classifications>`__

   * - ``document``
     - string
     - :doc:`Annotation (v4) <../../Annotation/v4/index>`
     - The identifier of the document that the annotation is over. `(more) <#document>`__

   * - ``label``
     - string
     - :doc:`Annotation (v4) <../../Annotation/v4/index>`
     - A label given to this object by a classifier. The value must be a simple string value of the label ... `(more) <#label>`__

   * - ``labelset``
     - array of string
     - :doc:`Annotation (v4) <../../Annotation/v4/index>`
     - When an annotation object contains results of a classification task, this metadata is used to ... `(more) <#labelset>`__

   * - ``labelsetUri``
     - string
     - :doc:`Annotation (v4) <../../Annotation/v4/index>`
     - A URI to an externally defined labelset. Since the labelset metadata is a list of simple strings, ... `(more) <#labelseturi>`__

   * - ``id`` **\***
     - string
     - :doc:`Thing (v1) <../../Thing/v1/index>`
     - A unique identifier for the annotation or document. Uniqueness is relative to the view the ... `(more) <#id>`__



Native
^^^^^^


frameType
"""""""""

- type: *string*
- required: no

The type of TimeFrame. Possible values include, but are not limited to, bars, tones, bars-and-tones, speech, noise, music, slate, chyron, lower-third, credits, and other.

No longer encouraged to use, instead ``label`` property should replace this property.


Inherited from :doc:`Interval (v2) <../../Interval/v2/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


end
"""

- type: *integer*
- required: no

The ending offset in the primary data. This point is exclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point.


start
"""""

- type: *integer*
- required: no

The starting offset in the primary data. This point is inclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point.


targets
"""""""

- type: *array of string*
- required: no

IDs of a sequence of annotations covering the region of primary data referred to by this annotation. Used as an alternative to *start* and *end* to point to component annotations (for example a token sequence) rather than directly into primary data, or to link two or more annotations (for example in a coreference annotation).


Inherited from :doc:`Region (v3) <../../Region/v3/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


timeUnit
""""""""

- type: *string*
- required: no

Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*.


Inherited from :doc:`Annotation (v4) <../../Annotation/v4/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


classifications
"""""""""""""""

- type: *object*
- required: no

A map from label values to their "score" numbers provided by a classifier. The score can be probability, similarity, confidence, or any other real number that was used to determine the label value.

*Optional* on top of the ``label`` property. However when this property is used, the ``label`` property must be one of the keys and the keys must match to the values defined in the ``labelset`` or ``labelsetUri`` annotation metadata.


document
""""""""

- type: *string*
- required: no

The identifier of the document that the annotation is over.


label
"""""

- type: *string*
- required: no

A label given to this object by a classifier. The value must be a simple string value of the label and must be one of the values defined in the ``labelset`` or ``labelsetUri`` annotation metadata.

.. note::

   Annotations from a classifier app must have this property.


labelset
""""""""

- type: *array of string*
- required: no

When an annotation object contains results of a classification task, this metadata is used to specify the label values used in classification. Individual annotations then must have ``label`` property that is one of the values in this list.

.. note::

   Annotations from a classifier app must have this metadata or ``labelsetUri`` metadata.

.. note::

   Not all of labels specified in the ``labelset`` must occur in the output annotations. For example, a ``labelset`` can contain a *catch-all* negative label, but if the negative label can be not interesting enough to keep in the output annotation.


labelsetUri
"""""""""""

- type: *string*
- required: no

A URI to an externally defined labelset. Since the ``labelset`` metadata is a list of simple strings, this URI can be used to point to a more detailed definition of the labelset. This can be a JSON-LD document or a SKOS concept scheme, for example.

.. note::

   Annotations from a classifier app must have this metadata or ``labelset`` metadata.


Inherited from :doc:`Thing (v1) <../../Thing/v1/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


id
""

- type: *string*
- required: yes

A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.


JSON Schema
-----------

.. code-block:: json

   {
     "additionalProperties": true,
     "properties": {
       "id": {
         "description": "A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.",
         "type": "string"
       },
       "document": {
         "type": "string",
         "description": "The identifier of the document that the annotation is over."
       },
       "labelset": {
         "items": {
           "type": "string"
         },
         "type": "array",
         "description": "When an annotation object contains results of a classification task, this metadata is used to specify the label values used in classification. Individual annotations then must have <code>label</code> property that is one of the values in this list. <br><br> [note] Annotations from a classifier app must have this metadata or <code> labelsetUri </code> metadata. [/note]<br><br> [note] Not all of labels specified in the <code>labelset</code> must occur in the output annotations. For example, a <code>labelset</code> can contain a <i>catch-all</i> negative label, but if the negative label can be not interesting enough to keep in the output annotation. [/note]"
       },
       "labelsetUri": {
         "type": "string",
         "description": "A URI to an externally defined labelset. Since the <code>labelset</code> metadata is a list of simple strings, this URI can be used to point to a more detailed definition of the labelset. This can be a JSON-LD document or a SKOS concept scheme, for example. <br><br> [note] Annotations from a classifier app must have this metadata or <code> labelset </code> metadata. [/note]"
       },
       "label": {
         "type": "string",
         "description": "A label given to this object by a classifier. The value must be a simple string value of the label and must be one of the values defined in the <code>labelset</code> or <code>labelsetUri</code> annotation metadata. <br><br> [note] Annotations from a classifier app must have this property. [/note]"
       },
       "classifications": {
         "additionalProperties": {
           "type": "number"
         },
         "type": "object",
         "description": "A map from label values to their \"score\" numbers provided by a classifier. The score can be probability, similarity, confidence, or any other real number that was used to determine the label value. <br><br> <i>Optional</i> on top of the <code>label</code> property. However when this property is used, the <code>label</code> property must be one of the keys and the keys must match to the values defined in the <code>labelset</code> or <code>labelsetUri</code> annotation metadata."
       },
       "timeUnit": {
         "type": "string",
         "description": "Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*."
       },
       "start": {
         "type": "integer",
         "description": "The starting offset in the primary data. This point is inclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point."
       },
       "end": {
         "type": "integer",
         "description": "The ending offset in the primary data. This point is exclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point."
       },
       "targets": {
         "items": {
           "type": "string"
         },
         "type": "array",
         "description": "IDs of a sequence of annotations covering the region of primary data referred to by this annotation. Used as an alternative to *start* and *end* to point to component annotations (for example a token sequence) rather than directly into primary data, or to link two or more annotations (for example in a coreference annotation)."
       },
       "frameType": {
         "type": "string",
         "description": "The type of TimeFrame. Possible values include, but are not limited to, bars, tones, bars-and-tones, speech, noise, music, slate, chyron, lower-third, credits, and other. <br><br> No longer encouraged to use, instead <code>label</code> property should replace this property."
       }
     },
     "required": [
       "id"
     ],
     "type": "object"
   }